--- a/x-tag/custom/styles.css
+++ b/x-tag/custom/styles.css
@@ -113,3 +113,11 @@ x-slide-item {
         color: #8CB56B; }
   x-slide-item code {
     font-size: 19px; }
+  x-slide-item .codewrap {
+    border: 1px solid rgba(255, 255, 255, 0.6);
+    padding: 1ex;
+    display: block; }
+
+x-slide-item-code {
+  display: block;
+  margin-bottom: 20px; }
