--- a/x-tag/custom/styles.css
+++ b/x-tag/custom/styles.css
@@ -121,3 +121,32 @@ x-slide-item {
 x-slide-item-code {
   display: block;
   margin-bottom: 20px; }
+
+x-giphy {
+  display: block;
+  position: absolute;
+  z-index: 99999;
+  top: 50%;
+  left: 50%;
+  display: block;
+  -webkit-transition: all 500ms;
+  -moz-transition: all 500ms;
+  transition: all 500ms;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  background: green;
+  visibility: hidden; }
+  x-giphy:not(.loaded) {
+    width: 50px;
+    height: 50px; }
+  x-giphy.created {
+    visibility: visible; }
+  x-giphy.loaded {
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -o-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%); }
